Added the left and middle part of the search bar.

--- a/Youtube/youtube.html
+++ b/Youtube/youtube.html
@@ -12,9 +12,14 @@
 
 <!-- the serach bar in a flex box-->
   <div class="header"> 
-    <div Class="left-section">left</div>
+    <div Class="left-section">
+        <img class="hamburger-menu" src="icons/hamburger-menu.svg" >
+        <img class="youtube-logo"   src="icons/youtube-logo.svg" >
+    </div>
     <div Class="middle-section">
         <input class="search-bar" type="text" placeholder="Search">
+        <button class="search"><img class="search-icon" src="icons/search.svg" ></button>
+        <button class="voice-search"><img class="voice-search-icon"  src="icons/voice-search-icon.svg" ></button>
     </div>
     <div Class="right-section">rigth</div>
     
